# TCO-CustomerChurn

./: .gitignore
data/: extract_all_gt.sh  mixer-rand.sh  mixer.sh
src/: eda_test.py  eda_train.py
submission/code/: Dockerfile  boost_data_gen.py  build-docker-helper.sh  encoding-100.json  encoding-120.json  encoding-20.json  encoding-32.json  encoding-64.json  encoding-in-100.json  encoding-in-120.json  encoding-in-20.json  encoding-in-32.json  encoding-in-64.json  encoding-in.json  encoding.json  experiments.txt  extract_gt.py  generate-encoding-input.py  generate-encoding.py  infer.sh  make_submission_txt.py  make_submission_txt.sh  merge_input_gt.py  merge_scores.sh  run-docker-helper.sh  scorer.py  test.sh  train.sh
submission/code/experiments/: Run1.sh  Run2.sh  Run3.sh  run.sh  run2.sh  run3.sh  run4.sh  run5.sh  run6.sh  run7.sh  run8.sh  run9.sh  runA.sh  runB.sh  runC.sh  runD.sh  runE.sh  runF.sh  runG.sh  runH.sh  runI.sh  runJ.sh  runK.sh  runL.sh  runM.sh  runN.sh  runO.sh  runP.sh
submission/code/experiments/clas4/: run.sh
submission/code/experiments/clas5/: run.sh
submission/code/experiments/clas6/: run.sh
submission/code/experiments/clas8/: run.sh
submission/code/kernel/: CMakeLists.txt
submission/code/kernel/app/: CMakeLists.txt
submission/code/kernel/app/src/: columns.cpp  columns.hpp  data_tools.cpp  data_tools.hpp  filesystem.cpp  filesystem.hpp  infer.cpp  infer.hpp  json_io.cpp  json_io.hpp  main.cpp  model_params.hpp  parse_line.cpp  parse_line.hpp  read_csv.cpp  read_csv.hpp  train.cpp  train.hpp
(+33 files in other folders)
